@@ -1,3 +1,14 @@
+2003-11-13 Damien Sandras  <dsandras@seconix.com>
+
+	* configure.in: Adapted includes order to cope with the non-recursive
+	system in openh323 cvs.
+	
+	* src/common.h, src/config.cpp, src/druid.cpp, src/endpoint.cpp,
+	src/gnomemeeting.cpp, src/main_window.cpp, src/pref_window.cpp,
+	src/sound_handling.cpp, src/sound_handling.h, src/videograbber.cpp,
+	src/videograbber.h: Converted the new and definitive plugins system
+	developed by Julien Puydt and Craig Southeren.
+	
 2003-11-12 Damien Sandras  <dsandras@seconix.com>
 
 	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/endpoint.h,
